fix toggle list-item using marker with div-area event + few other ui alignments

--- a/magpie/ui/home/static/style.css
+++ b/magpie/ui/home/static/style.css
@@ -194,18 +194,20 @@ table thead {
 }
 
 .checkbox-align label {
-  display: block;
-  /*float: left;*/
-  padding-left: 0.2em;
-  padding-right: 0.2em;
-  padding-bottom: 1em;
-  white-space: nowrap;
+    display: block;
+    /*float: left;*/
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    padding-bottom: 1em;
+    white-space: nowrap;
 }
 .checkbox-align input {
-  vertical-align: middle;
+    vertical-align: middle;
+    margin-top: 0.05em;
 }
+
 .checkbox-align label span {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 /*---Panel Information Box---*/
@@ -267,10 +269,8 @@ table.panel-line td {
 }
 
 .panel-line-checkbox {
-    vertical-align: middle;
-    display: inline-flex;
-    margin-top: 0;
-    margin-bottom: 0;
+    padding-top: 0.1em;
+    display: inline-block;
 }
 
 .panel-title {
@@ -467,13 +467,16 @@ table.panel-line td {
     display: none;
 }
 
+.option-container {
+    margin-bottom: 1em;
+}
+
 .option-section {
     margin-left: 0.5em;
     display: inline-block;
 }
 
 .option-text {
-
 }
 
 .permission-effective {
@@ -570,12 +573,13 @@ table.simple-list input[type="submit"] {
 }
 
 .tree-header {
-    padding: 5em 0 2em;
+    padding: 1em 0 0;
     font-weight: bold;
 }
 
 .tree .collapsible {
     /*cursor: pointer;*/  /* looks better on 'tree-key' element */
+    margin-top: -1em;  /* make each new sub-list aligned such as if continuous flat list without extra spacing */
 }
 
 .tree .collapsible > ul {
@@ -585,6 +589,23 @@ table.simple-list input[type="submit"] {
 
 .tree .collapsible.expanded > ul {
     display: block;     /* expanded */
+}
+
+/* fake marker area to receive click event handler over 'collapsible::marker' list-item (toggling arrow) */
+.collapsible-marker {
+    /* make the area offset back (starting from text) over the arrow marker of list-item */
+    position: relative;
+    left: -1.25em;
+    top: 1.25em;
+    /* make the marker area large enough to overlap completely the arrow with a little overflow  */
+    width: 1.25em;
+    height: 1.25em;
+    margin-bottom: -0.25em;  /* undo extra height added to align the marker, preserve appearance of line height */
+    background-color: transparent;  /* adjust color with alpha value to apply changes to help visualize during edits */
+}
+
+.collapsible-marker:hover {
+    cursor: pointer;
 }
 
 /* leaf nodes will have this style, as not overridden by following ones */
@@ -663,6 +684,9 @@ div.tree-button {
 
 .clear {
     clear: both;
+}
+
+.underline {
     border-bottom: 1px solid #DDDDDD;
 }
 
@@ -747,6 +771,14 @@ ul.breadcrumb li a:hover {
     vertical-align: center;
 }
 
+.header-line {
+    height: 5px;  /* offset to avoid being partially under Magpie logo */
+    border-bottom: 1px solid #DDDDDD;
+}
+
+.header-section {
+}
+
 .header>div>a {
     color: white;
     font-size: 3em;
@@ -795,6 +827,14 @@ ul.breadcrumb li a:hover {
 #image-overlay>img {
     width: inherit;
     height: inherit;
+}
+
+.language {
+    float: left;
+}
+
+.logged {
+    float: right;
 }
 
 /*---Home---*/
